
        * Scope units now support OOMPolicy=. Login session scopes default to
          OOMPolicy=continue, allowing login scopes to survive the oom killer
          terminating some processes in the scope.

        * systemd-fstab-generator now supports x-systemd.makefs option for
          /sysroot (in the initrd).

        Changes in udev:

        * The new net naming scheme "v253" has been introduced. In the new
          scheme, ID_NET_NAME_PATH is also set for USB devices not connected via
          a PCI bus. This extends the converage of predictable interface names
          in some embedded systems.

          The "amba" bus path is now included in ID_NET_NAME_PATH, resulting in
          a more informative path on some embedded systems.

        Changes in sd-boot, bootctl, and the Boot Loader Specification:

	* systemd-boot now passes its random seed directly to the kernel's RNG
	  via the LINUX_EFI_RANDOM_SEED_TABLE_GUID configuration table, which
	  means the RNG gets seeded very early in boot before userspace has
	  started.

	* systemd-boot will pass a random seed when secure boot is enabled if
	  it can additionally get a random seed from EFI itself, via EFI's RNG
	  protocol or a prior seed in LINUX_EFI_RANDOM_SEED_TABLE_GUID from a
	  preceding bootloader.

	* The random seed stored in the ESP is now refreshed whenever
	  systemd-random-seed.service is run.

	* systemd-boot handles various seed inputs using a domain- and
	  field-separated hashing scheme.

	* systemd-boot's 'random-seed-mode' option has been removed. A system
	  token is now always required to be present for random seeds to be
	  used.

	* systemd-stub now processes random seeds in the same way as
	  systemd-boot, in case a unified kernel image is being used from a
	  different bootloader than systemd-boot.

	* bootctl will now generate a system token on all EFI systems, even
	  virtualized ones, and is activated in the case that the system token